--- a/ASSETS/Kanor.css
+++ b/ASSETS/Kanor.css
@@ -1,82 +1,119 @@
-p{
-    text-indent:1em;
-    text-align:justify;
-    height: auto;
-    font-size:20px;
-    word-spacing:5px;
+@font-face {
+    font-family: 'EB Garamond';
+    font-style: normal;
+    font-weight: 400;
+    src: local('EB Garamond 12'), url(http://brick.freetls.fastly.net/fonts/ebgaramond/400.woff) format('woff');
+}
+@font-face {
+    font-family: 'EB Garamond';
+    font-style: italic;
+    font-weight: 400;
+    src: local('EB Garamond 12 Italic'), url(http://brick.freetls.fastly.net/fonts/ebgaramond/400i.woff) format('woff');
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Open Sans'), url(http://brick.freetls.fastly.net/fonts/opensans/400.woff) format('woff');
+}
+@font-face {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Open Sans Bold'), url(http://brick.freetls.fastly.net/fonts/opensans/700.woff) format('woff');
+}
+
+p {
+    text-indent: 2em;
+    text-align: justify;
+    height: fit-content;
+    font-size: 23px;
+    word-spacing: 2px;
+    line-height: 1.2;
 }
 h1 {
-    color:darkred;
-    font-size:30px;
-    text-align:center;
+    color: darkred;
+    font-size: 25px;
+    text-align: left;
+    font-family: 'EB Garamond';
+    font-language-override: normal;
+    font-kerning: auto;
+    font-feature-settings: 'kern', 'liga', 'dlig', 'hlig', 'cswh';
+    font-synthesis: weight style;
 }
 h2 {
-    color:darkred;
-    font-size:15px;
-    text-align:center;
+    color: darkred;
+    font-size: 15px;
+    text-align: center;
 }
 
 body {
-    background-color:white;
-    text-align:justify;
-    margin:12em;
+    background-color: white;
+    text-align: justify;
+    margin-right: 12em;
+    margin-left: 12em;
+    margin-top: 3em;
+    font-family: 'EB Garamond';
 }
 
 .cb {
-    font-size:15px;
-    color:darkred;
+    font-size: 15px;
+    color: darkred;
 }
 
 .pb {
-    font-size:15px;
-    color:darkred;
+    font-size: 15px;
+    color: darkred;
 }
 
-.url{
-    font-size:15px;
-    color:darkred;
+.url {
+    font-size: 15px;
+    color: darkred;
 }
 
 .persName {
-    color:blue;
+    color: blue;
 }
 
 .placeName {
-    color:green;
+    color: green;
 }
 
 .rs {
-    color:navy;   
+    color: navy;
     cursor: pointer;
 }
 
 .place {
-    color:olive;   
+    color: olive;
     cursor: pointer;
 }
 
 .people {
-    color:pink;
+    color: pink;
 }
 
 .supplied {
-    font-weight:bold;
+    font-weight: bold;
 }
 
 .c {
-    font-variant:small-caps;
-    font-size:30px;
-    color:darkred;
+    font-variant: small-caps;
+    font-size: 30px;
+    font-feature-settings: 'kern', 'swsh';
+            color: orange;
+
 }
 
 .num {
-    font-variant:small-caps;
+    font-variant: small-caps;
 }
 
 .del {
-    text-decoration:line-through;
-    }
-   
+    text-decoration: line-through;
+}
+
 .lem {
     font-style: italic;
 }
@@ -86,34 +123,34 @@ body {
 }
 
 .tooltip {
-position: relative;
-opacity: 1;
+    position: relative;
+    opacity: 1;
 }
 
 .tooltip .tooltip-content {
-visibility: hidden;
-width: 250px;
-background-color: #f9f9f9;
-color: #333;
-text-align: center;
-border: 1px solid #ccc;
-border-radius: 4px;
-padding: 5px;
-position: absolute;
-z-index: 9999;
-bottom: 125%;
-left: 50%;
-transform: translateX(-50%);
-opacity: 0;
-transition: opacity 0.3s;
+    visibility: hidden;
+    width: 250px;
+    background-color: #f9f9f9;
+    color: #333;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 5px;
+    position: absolute;
+    z-index: 9999;
+    bottom: 125%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s;
 }
 
 .tooltip:hover .tooltip-content {
-visibility: visible;
-opacity: 1;
+    visibility: visible;
+    opacity: 1;
 }
 
 .arevoir {
     color: red;
-    font-weight:bold;
+    font-weight: bold;
 }
