--- a/ASSETS/Kanor.css
+++ b/ASSETS/Kanor.css
@@ -104,7 +104,7 @@ body {
     color: green;
 }
 
-.c {
+.lettrine {
     font-variant: small-caps;
     font-size: 30px;
     font-feature-settings: 'kern', 'swsh';
