--- a/ASSETS/Kanor.css
+++ b/ASSETS/Kanor.css
@@ -25,7 +25,6 @@
 }
 
 p {
-    text-indent: 2em;
     text-align: justify;
     height: fit-content;
     font-size: 23px;
@@ -54,7 +53,7 @@ body {
     font-size: 20px;
     text-align: justify;
     margin-right: 13em;
-    margin-left: 7em;
+    margin-left: 13em;
     margin-top: 2em;
     font-family: 'EB Garamond';
 }
@@ -65,10 +64,20 @@ body {
 }
 
 .pb {
-display: inline-block;
+    display: inline-block;
     text-indent: 0em;
     font-size: 15px;
     color: darkred;
+}
+
+.pbfloat {
+    position: absolute;
+    left: 7em;
+}
+
+.cbfloat {
+    position: absolute;
+    left: 5em;
 }
 
 .url {
@@ -76,24 +85,35 @@ display: inline-block;
     color: darkred;
 }
 
+a:link {
+    color: #c00
+} /* unvisited links       */
+a:visited {
+    color: #0c0
+} /* visited links         */
+a:hover,
+a:focus {
+    color: #00c
+} /* user hovers, or focus */
+a:active {
+    color: #ccc
+} /* active links          */
+
+
 
 .persName {
-    display: inline-block;
     text-indent: 0em;
 }
 
-.persName::first-letter {
-    color: royalblue;
-}
 
 .placeName {
     display: inline-block;
     text-indent: 0em;
-   }
-   
-   .placeName {
-   background-color: black;
-    color: #0FFF50;
+}
+
+.placeName {
+
+
 }
 
 .rs {
@@ -122,9 +142,13 @@ display: inline-block;
 
 .lettrine {
     font-variant: small-caps;
-    font-size: 30px;
     font-feature-settings: 'kern', 'swsh';
     color: orange;
+    text-shadow: 3px 3px 3px silver;
+    line-height: 80%;
+    margin: -.1em 0px;
+    padding-right: .1em
+
 
 }
 
@@ -194,4 +218,8 @@ display: inline-block;
 
 .title {
     font-size: 50px
+}
+
+.section {
+    margin-top: 70px;
 }
