--- a/ASSETS/Kanor.css
+++ b/ASSETS/Kanor.css
@@ -26,10 +26,11 @@
 
 p {
     text-align: justify;
-    height: fit-content;
+    margin-top: 40px;
     font-size: 23px;
     word-spacing: 2px;
     line-height: 1.4;
+    text-indent: 1em;
 }
 
 .rubricated {
@@ -221,5 +222,5 @@ a:active {
 }
 
 .section {
-    margin-top: 70px;
+    
 }
