--- a/ASSETS/Kanorpropre.css
+++ b/ASSETS/Kanorpropre.css
@@ -26,10 +26,11 @@
 
 p {
     text-align: justify;
-    height: fit-content;
     font-size: 23px;
     word-spacing: 2px;
     line-height: 1.4;
+    margin-top: 40px;
+    text-indent: 1em;
 }
 
 .rubricated {
@@ -221,5 +222,5 @@ line-height: 1.1;
 }
 
 .section {
-    margin-top: 70px;
+    
 }
