--- a/ASSETS/Kanor.css
+++ b/ASSETS/Kanor.css
@@ -108,12 +108,14 @@ a:active {
 
 .persName {
     text-indent: 0em;
+    color:blue;
 }
 
 
 .placeName {
     display: inline-block;
     text-indent: 0em;
+    color:violet;
 }
 
 
@@ -123,12 +125,10 @@ a:active {
 }
 
 .place {
-    color: olive;
     cursor: pointer;
 }
 
 .people {
-    color: pink;
 }
 
 .supplied {
